--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ header {
 
 .header-text, .img-placeholder {
     flex: 1 1 0;
-    margin: 20px;
+    margin: 50px;
 }
 
 .img-placeholder {
@@ -54,6 +54,34 @@ header {
     align-items: center;
 }
 
+.second-part {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding:
+}
+
+.cards{
+    display: flex;
+    gap: 10px;
+    margin: 0px 200px;
+    margin-bottom: 100px;
+}
+
+.card {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.card-image {
+    height: 150px;
+    width: 150px;
+    border:2px solid #3882F6;
+    border-radius: 12px;
+    margin: 0;
+}
 .quote-section{
     background-color: #E5E7EB;
 }
