Done with landing page

--- a/styles.css
+++ b/styles.css
@@ -119,9 +119,44 @@ header {
 
 footer {
     background-color: #1F2937;
+    color: #E5E7EB;
+    text-align: center;
 }
 
 button {
     border-radius: 12px;
     padding: 10px;
+}
+
+.sign-up {
+    margin: 150px;
+    display: flex;
+    justify-content: space-around;
+    border-radius: 12px;
+    color: white;
+}
+
+.sign-up-button {
+    align-self: center;
+    border-color: white;
+}
+
+button {
+    color: white;
+    border-style: solid;
+}
+
+.sign-up-text h1{
+    font-weight: bold;
+    margin-bottom: 0;
+}
+
+.sign-up-text p {
+    font-weight: lighter;
+    color: #E5E7EB;
+    margin-top: 0;
+}
+
+.sign-up-text {
+    margin: 20px;
 }
